# cloudformation-permissions

./: README.md  TIPS.md  action.yaml  noxfile.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  unit-test.yaml
src/can_i_stack_it/: bootstrap.py
src/can_i_stack_it/adapters/: cloudformation.py  iam.py  sts.py
src/can_i_stack_it/domain/: commands.py  model.py
src/can_i_stack_it/entrypoints/: cli.py
src/can_i_stack_it/service/: handlers.py
src/cloudformation_permissions/: bootstrap.py
src/cloudformation_permissions/adapters/: cloudformation.py  iam.py  reporter.py  sar.py  sts.py
src/cloudformation_permissions/adapters/permissions_resolver/: __init__.py
src/cloudformation_permissions/adapters/template_loader/: __init__.py
src/cloudformation_permissions/domain/: model.py  queries.py
src/cloudformation_permissions/entrypoints/: cli.py
src/cloudformation_permissions/service/: __init__.py  handlers.py
tests/integration/: test_cloudformation.py  test_entrypoints_cli.py  test_iam.py  test_sts.py
tests/integration/data/: template.yaml
tests/integrations/: test_cloudformation.py  test_iam.py  test_sts.py
tests/unit/: test_resource_information_resolver.py
