[project]
name = "cloudformation-permissions"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "George Alton", email = "georgealton@gmail.com" }
]
dependencies = [
    "boto3>=1.34.116",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "punq>=0.7.0",
    "aws-sam-translator>=1.89.0",
    "cfn-lint>=1.12.4",
    "result>=0.17.0",
    "attrs>=24.2.0",
    "rich>=13.8.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cloudformation-permissions = "cloudformation_permissions.entrypoints.cli:cli"

[tool.rye]
managed = true
dev-dependencies = [
    "boto3-stubs[cloudformation,iam,sts]>=1.35.18",
    "pytest>=8.2.1",
    "nox>=2024.4.15",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "F",
    "I",
    "S",
    "B",
    "A",
    "R",
    "FURB",
    "SIM",
    "C4",
    "R",
    "PL",
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cloudformation_permissions"]
